# cose-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  rustfmt.toml
examples/sign_verify/: main.rs  test_setup.rs  util_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cbor_decoder.rs  fuzz_cose_decoder.rs  fuzz_decode_signature.rs
src/: capi.rs  cbor_bin.rs  cose.rs  decoder.rs  lib.rs  nss.rs  test_cose.rs  test_nss.rs  test_setup.rs  util.rs  util_test.rs
src/cbor/: cbor.rs  decode.rs  decoder.rs  mod.rs  serializer.rs  test_cose.rs  test_decode.rs  test_decoder.rs  test_decoder2.rs  test_serializer.rs
src/cose/: cose.rs  cose_sign.rs  decoder.rs  mod.rs  nss.rs  test_cose.rs  test_decoder.rs  test_nss.rs  test_nss_sign.rs  test_nss_verify.rs  test_setup.rs  test_verify.rs  util.rs  verify.rs
src/verify/: mod.rs  test_verify.rs  verify.rs
tools/certs/: certs.md  certs.sh  ee-p256.certspec  ee-p384.certspec  ee-p521.certspec  ee-rsa.certspec
