[package]
name = "cose"
version = "0.1.2"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "David Keeler <dkeeler@mozilla.com>"]
description = "Library to use COSE (https://tools.ietf.org/html/rfc8152) in Rust"
repository = "https://github.com/franziskuskiefer/cose-rust"
keywords = ["cose", "jose", "cbor"]
license = "MPL-2.0"
build = "build.rs"

[dev-dependencies]
scopeguard = "0.3"

[lib]
name = "cose"
path = "src/cose.rs"

[features]
default = []
