[package]
name = "cose"
version = "0.1.4"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "David Keeler <dkeeler@mozilla.com>"]
description = "Library to use COSE (https://tools.ietf.org/html/rfc8152) in Rust"
readme = "README.md"
repository = "https://github.com/franziskuskiefer/cose-rust"
keywords = ["cose", "jose"]
license = "MPL-2.0"
build = "build.rs"
exclude = [".travis.yml"]

[dependencies]
moz_cbor = "0.1.0"

[dev-dependencies]
scopeguard = "0.3"

[lib]
name = "cose"
path = "src/cose.rs"

[features]
default = []

[[example]]
name = "sign_verify"
path = "examples/sign_verify/main.rs"
